--- a/montspeci/index.html
+++ b/montspeci/index.html
@@ -3,7 +3,7 @@
     
 <head>
     <title>MONTSERRAT SPECIMEN</title>
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="montspeci/assets/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/lqz8eob.css">
 </head>
 
