--- a/montspeci/index.html
+++ b/montspeci/index.html
@@ -9,15 +9,14 @@
 
 <body>
     <hr>
-    <h1 id="--text01">CAINCAIN<br>CAINCAIN<br>CAINCAIN</h1>
+    <div id="--text01" class="text">CAINCAIN<br>CAINCAIN<br>CAINCAIN</div>
     
     <section class="two-columns">
-        <div align="right">
-        <p id="--text02"><strong>My name is Cain.</strong> I was born in <u>December, on the 14th, in the year 2000 @ 12:08 P.M.</u> This makes me a <em>Sagittarius</em> and puts me in the <em>Year of the Dragon</em>.</p>
+        <div id="--text02" class="text"><strong>My name is Cain.</strong> I was born in <u>December, on the 14th, in the year 2000 @ 12:08 P.M.</u> This makes me a <em>Sagittarius</em> and puts me in the <em>Year of the Dragon</em>.</div>
         <hr>
-        <p id="--text03">I grew up in Broussard and Lafayette, LA. When I graduated high school in May 2019, I came to Louisiana State University to study Studio Art with a concentration in Graphic Design. I declared a minor in Digital Media Arts & Engineering.</p>
+        <div id="--text03" class="text">I grew up in Broussard and Lafayette, LA. When I graduated high school in May 2019, I came to Louisiana State University to study Studio Art with a concentration in Graphic Design. I declared a minor in Digital Media Arts & Engineering.</div>
         <br>
-        <p id="--text04">sometimes... i wish i felt more than my major.</p></div>
+        <div id="--text04" class="text">sometimes... i wish i felt more than my major.</div>
     </section>
 
     <section class="two-columns">
