--- a/montspeci/index.html
+++ b/montspeci/index.html
@@ -12,48 +12,111 @@
     <h1>CAINCAIN<br>CAINCAIN<br>CAINCAIN</h1>
 
     <section class="two-columns">
-        <div align="right">
-        <p><strong>My name is Cain.</strong> I was born in <u>December, on the 14th, in the year 2000 @ 12:08 P.M.</u> This makes me a <em>Sagittarius</em> and puts me in the <em>Year of the Dragon</em>.</p>
+        <p class="one"><strong>My name is Cain.</strong> I was born in <u>December, on the 14th, in the year 2000 @ 12:08 P.M.</u> This makes me a <em>Sagittarius</em> and puts me in the <em>Year of the Dragon</em>.</p>
         <hr>
-        <p>I grew up in Broussard and Lafayette, LA. When I graduated high school in May 2019, I came to Louisiana State University to study Studio Art with a concentration in Graphic Design. I declared a minor in Digital Media Arts & Engineering.</p>
+        <p class="two">I grew up in Broussard and Lafayette, LA. When I graduated high school in May 2019, I came to Louisiana State University to study Studio Art with a concentration in Graphic Design. I declared a minor in Digital Media Arts & Engineering.</p>
         <br>
-        <p>sometimes... i wish i felt more than my major.</p></div>
+        <p class="three">sometimes... i wish i felt more than my major.</p>
     </section>
 
     <section class="two-columns">
-        <div align="left">
-        <p id="02">Back in high school I shifted from wanting to do biology to graphic design.</p></div>
+        <p class="four">Back in high school I shifted from wanting to do biology to graphic design.</p>
     </section>
 
     <br>
 
     <section>
-        <div align="center">
-    <p>being in a major that is meant to be for <em>creatives</em> & <em>innovators</em> has often put a lot of pressure on me...</div></p>
+    <p class="five">being in a major that is meant to be for <em>creatives</em> & <em>innovators</em> has often put a lot of pressure on me...</p>
     </section>
 
     <section class="two-columns">
-        <div align="left">
-        <p>
+        <p class="six">
         the stress of creating something new all the time. the stress of following what is trending to keep up. the stress of not wanting to be like anyone else. the stress...
         <br>
         the stress.
 
     <section class="two-columns">
-        <div align="left">
-        <p>
-        <p id="text08">
+        <p class="seven">
         THE STRESS.
         <br>
         THE STRESS.
         <br>
         THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
         </p>
-        <p>
-        <p id="text09">
+        <p class="eight">
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        </p>
+        <p class="nine">
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        THE STRESS.
+        <br>
+        </p>
+        <p class="ten">
         never again.
         </p>
-        </div>
  
  </body>
 
