--- a/montspeci/index.html
+++ b/montspeci/index.html
@@ -25,9 +25,9 @@
 
     <br>
 
-    <section>
+    <footer>
     <p class="five">being in a major that is meant to be for <em>creatives</em> & <em>innovators</em> has often put a lot of pressure on me...</p>
-    </section>
+    </footer>
 
     <section class="two-columns">
         <p class="six">
