--- a/montspeci/index.html
+++ b/montspeci/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <hr>
-    <h1>CAINCAIN<br>CAINCAIN<br>CAINCAIN</h1>
+    <header>
+        <h1>CAINCAIN<br>CAINCAIN<br>CAINCAIN</h1>
+    </header>
 
     <section class="two-columns">
         <p class="one"><strong>My name is Cain.</strong> I was born in <u>December, on the 14th, in the year 2000 @ 12:08 P.M.</u> This makes me a <em>Sagittarius</em> and puts me in the <em>Year of the Dragon</em>.</p>
@@ -34,8 +36,16 @@
         the stress of creating something new all the time. the stress of following what is trending to keep up. the stress of not wanting to be like anyone else. the stress...
         <br>
         the stress.
+        <br>
+        it crushes me. daily.
+        <br>
+        but... i do sometimes remember:
+        <br>
+        i love what i do. i do. i do. i do. i do. i do.
+        <br>
+        and i am never going to give up like that. never, ever.
 
-    <section class="two-columns">
+    <section class="twocolumns">
         <p class="seven">
         THE STRESS.
         <br>
