--- a/typeposter/index.html
+++ b/typeposter/index.html
@@ -8,6 +8,7 @@
  </head>
 
 <body>
+    <div id="container">
     <hr>
     <header>
         <h1>CAINCAIN<br>CAINCAIN<br>CAINCAIN</h1>
@@ -134,7 +135,7 @@
         </p>
         </div>
     </section>
- 
- </body>
+    </div>
+    </body>
 
 </html>
