--- a/typeposter/index.html
+++ b/typeposter/index.html
@@ -8,7 +8,7 @@
  </head>
 
 <body>
-    <div id="container">
+    <div class="container">
     <hr>
     <header>
         <h1>CAINCAIN<br>CAINCAIN<br>CAINCAIN</h1>
